Sostituisce l'uso di stringhe letterali per la codifica URL con StandardCharsets.UTF_8 in GetHandlerV1 e GetHandlerV2